// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expandProps should expand props at the start with option 1`] = `
"<svg {...props} width={10} height={10}>
  <g stroke=\\"#063855\\" strokeWidth={2} />
</svg>
"
`;

exports[`expandProps should expand props in the end by default 1`] = `
"<svg width={10} height={10} {...props}>
  <g stroke=\\"#063855\\" strokeWidth={2} />
</svg>
"
`;

exports[`expandProps should expand props in the end with option 1`] = `
"<svg width={10} height={10} {...props}>
  <g stroke=\\"#063855\\" strokeWidth={2} />
</svg>
"
`;
